--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,9 @@ matrix:
     - python: 3.4
       env: TOXENV=py34-dj111
 
+    - python: 3.4
+      env: TOXENV=py34-dj20
+
     - python: 3.5
       env: TOXENV=py35-dj18
 
@@ -45,10 +48,16 @@ matrix:
       env: TOXENV=py35-dj111
 
     - python: 3.5
+      env: TOXENV=py34-dj20
+
+    - python: 3.5
       env: TOXENV=py35-djmaster
 
     - python: 3.6
       env: TOXENV=py36-dj111
+
+    - python: 3.6
+      env: TOXENV=py34-dj20
 
     - python: 3.6
       env: TOXENV=py36-djmaster
