--- a/tox.ini
+++ b/tox.ini
@@ -3,17 +3,15 @@ skipsdist = True
 usedevelop = True
 minversion = 1.8
 envlist =
-    flake8-py27,
-    flake8-py34,
-    py{27,33,34,35}-dj18,
+    py{27,34,35}-dj18,
     py{27,34,35}-{dj19,dj110},
     py{27,34,35,36}-dj111,
-    py{34,35,36}-djmaster
+    py{35,36}-dj22,
+    py{36}-djmaster
 
 [testenv]
 basepython =
     py27: python2.7
-    py33: python3.3
     py34: python3.4
     py35: python3.5
     py36: python3.6
@@ -23,13 +21,14 @@ setenv =
     PYTHONPATH = {toxinidir}
     DJANGO_SETTINGS_MODULE=tests.test_settings
 deps =
-	py{27,33,34,35,36,pypy}: coverage
-    django-discover-runner
-    psycopg2
+	py{27,34,35,36,pypy}: coverage
+    py27: mock
+    psycopg2-binary
     dj18: https://github.com/django/django/archive/stable/1.8.x.tar.gz#egg=django
     dj19: https://github.com/django/django/archive/stable/1.9.x.tar.gz#egg=django
     dj110: https://github.com/django/django/archive/stable/1.10.x.tar.gz#egg=django
     dj111: https://github.com/django/django/archive/stable/1.11.x.tar.gz#egg=django
+    dj22: https://github.com/django/django/archive/stable/2.2.x.tar.gz#egg=django
     djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
 
 commands =
