Add more python and django versions (#17)

--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,9 @@ envlist =
     py{27,34,35}-dj18,
     py{27,34,35}-{dj19,dj110},
     py{27,34,35,36}-dj111,
-    py{35,36}-dj22,
-    py{36}-djmaster
+    py{35,36,37,38}-dj22,
+    py{36,37,38}-dj30
+    py{36,37,38}-djmaster
 
 [testenv]
 basepython =
@@ -15,13 +16,15 @@ basepython =
     py34: python3.4
     py35: python3.5
     py36: python3.6
+    py37: python3.7
+    py38: python3.8
     pypy: pypy
 usedevelop = true
 setenv =
     PYTHONPATH = {toxinidir}
     DJANGO_SETTINGS_MODULE=tests.test_settings
 deps =
-	py{27,34,35,36,pypy}: coverage
+	py{27,34,35,36,37,38,pypy}: coverage
     py27: mock
     psycopg2-binary
     dj18: https://github.com/django/django/archive/stable/1.8.x.tar.gz#egg=django
@@ -29,6 +32,7 @@ deps =
     dj110: https://github.com/django/django/archive/stable/1.10.x.tar.gz#egg=django
     dj111: https://github.com/django/django/archive/stable/1.11.x.tar.gz#egg=django
     dj22: https://github.com/django/django/archive/stable/2.2.x.tar.gz#egg=django
+    dj30: https://github.com/django/django/archive/stable/3.0.x.tar.gz#egg=django
     djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
 
 commands =
