--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: python
 matrix:
   fast_finish: true
   allow_failures:
-  - env: TOXENV=py35-djmaster
   - env: TOXENV=py36-djmaster
+  - env: TOXENV=py37-djmaster
+  - env: TOXENV=py38-djmaster
   include:
   - python: 2.7
     env: TOXENV=py27-dj18
@@ -36,7 +37,21 @@ matrix:
   - python: 3.6
     env: TOXENV=py36-dj22
   - python: 3.6
+    env: TOXENV=py36-dj30
+  - python: 3.6
     env: TOXENV=py36-djmaster
+  - python: 3.7
+    env: TOXENV=py37-dj22
+  - python: 3.7
+    env: TOXENV=py37-dj30
+  - python: 3.7
+    env: TOXENV=py37-djmaster
+  - python: 3.8
+    env: TOXENV=py38-dj22
+  - python: 3.8
+    env: TOXENV=py38-dj30
+  - python: 3.8
+    env: TOXENV=py38-djmaster
 install:
 - pip install tox
 script:
