--- a/tox.ini
+++ b/tox.ini
@@ -3,37 +3,41 @@ skipsdist = True
 usedevelop = True
 minversion = 1.8
 envlist =
-    py{27,34,35}-dj18,
-    py{27,34,35}-{dj19,dj110},
-    py{27,34,35,36}-dj111,
-    py{35,36,37,38}-dj22,
-    py{36,37,38}-dj30
-    py{36,37,38}-djmaster
+    py{2.7,3.4,3.5}-dj1.8,
+    py{2.7,3.4,3.5}-{dj1.9,dj1.10},
+    py{2.7,3.4,3.5,3.6}-dj1.11,
+    py{3.5,3.6,3.7,3.8,3.9}-dj2.2,
+    py{3.6,3.7,3.8,3.9}-dj3.0
+    py{3.6,3.7,3.8,3.9}-dj3.1
+    py{3.6,3.7,3.8,3.9}-djmaster
 
 [testenv]
+passenv = DJANGO_DB_HOST
 basepython =
-    py27: python2.7
-    py34: python3.4
-    py35: python3.5
-    py36: python3.6
-    py37: python3.7
-    py38: python3.8
+    py2.7: python2.7
+    py3.4: python3.4
+    py3.5: python3.5
+    py3.6: python3.6
+    py3.7: python3.7
+    py3.8: python3.8
+    py3.9: python3.9
     pypy: pypy
 usedevelop = true
 setenv =
     PYTHONPATH = {toxinidir}
     DJANGO_SETTINGS_MODULE=tests.test_settings
 deps =
-	py{27,34,35,36,37,38,pypy}: coverage
+	py{2.7,3.4,3.5,3.6,3.7,3.8,3.9,pypy}: coverage
     py27: mock
     psycopg2-binary
-    dj18: https://github.com/django/django/archive/stable/1.8.x.tar.gz#egg=django
-    dj19: https://github.com/django/django/archive/stable/1.9.x.tar.gz#egg=django
-    dj110: https://github.com/django/django/archive/stable/1.10.x.tar.gz#egg=django
-    dj111: https://github.com/django/django/archive/stable/1.11.x.tar.gz#egg=django
-    dj22: https://github.com/django/django/archive/stable/2.2.x.tar.gz#egg=django
-    dj30: https://github.com/django/django/archive/stable/3.0.x.tar.gz#egg=django
+    dj1.8: https://github.com/django/django/archive/stable/1.8.x.tar.gz#egg=django
+    dj1.9: https://github.com/django/django/archive/stable/1.9.x.tar.gz#egg=django
+    dj1.10: https://github.com/django/django/archive/stable/1.10.x.tar.gz#egg=django
+    dj1.11: https://github.com/django/django/archive/stable/1.11.x.tar.gz#egg=django
+    dj2.2: https://github.com/django/django/archive/stable/2.2.x.tar.gz#egg=django
+    dj3.0: https://github.com/django/django/archive/stable/3.0.x.tar.gz#egg=django
+    dj3.1: https://github.com/django/django/archive/stable/3.1.x.tar.gz#egg=django
     djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
 
 commands =
-    {envbindir}/django-admin.py test -v2 {posargs:tests}
+    {envbindir}/python -Wd manage.py test -v2 {posargs:tests}
