--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,35 @@
 language: python
 matrix:
   fast_finish: true
-  allow_failures:
-  - env: TOXENV=py36-djmaster
-  - env: TOXENV=py37-djmaster
-  - env: TOXENV=py38-djmaster
-  - env: TOXENV=py39-djmaster
+#  allow_failures:
+#  - env: TOXENV=py36-djmaster
+#  - env: TOXENV=py37-djmaster
+#  - env: TOXENV=py38-djmaster
+#  - env: TOXENV=py39-djmaster
+#  include:
+#  - python: 3.6
+#    env: TOXENV=py36-djmaster
+#  - python: 3.7
+#    env: TOXENV=py37-djmaster
+#  - python: 3.8
+#    env: TOXENV=py38-djmaster
+#  - python: 3.9
+#    env: TOXENV=py39-djmaster
   include:
-  - python: 3.6
-    env: TOXENV=py36-djmaster
-  - python: 3.7
-    env: TOXENV=py37-djmaster
-  - python: 3.8
-    env: TOXENV=py38-djmaster
-  - python: 3.9
-    env: TOXENV=py39-djmaster
-install:
-- pip install tox==3.14.5
-script:
-- tox -e $TOXENV
-addons:
-  postgresql: '10'
-  apt:
-    packages:
-    - postgresql-10
-    - postgresql-client-10
-before_script:
-- psql -c 'create database pool;' -U postgres
-- psql -c "CREATE USER pool WITH PASSWORD 'pool';" -U postgres
+    - python: 3.7
+#install:
+#- pip install tox==3.14.5
+#script:
+#- tox -e $TOXENV
+#addons:
+#  postgresql: '10'
+#  apt:
+#    packages:
+#    - postgresql-10
+#    - postgresql-client-10
+#before_script:
+#- psql -c 'create database pool;' -U postgres
+#- psql -c "CREATE USER pool WITH PASSWORD 'pool';" -U postgres
 deploy:
   install: skip
   script: skip
