--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ matrix:
 #    env: TOXENV=py39-djmaster
   include:
     - python: 3.7
+install:
+  - ":"
 #install:
 #- pip install tox==3.14.5
 #script:
