--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
   include:
     - python: 3.7
 install:
-  - ":"
+  - echo "Empty install"
 #install:
 #- pip install tox==3.14.5
 #script:
