--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
-matrix:
-  fast_finish: true
+python:
+  - 3.7
+#matrix:
+#  fast_finish: true
 #  allow_failures:
 #  - env: TOXENV=py36-djmaster
 #  - env: TOXENV=py37-djmaster
@@ -33,8 +35,6 @@ install:
 #- psql -c 'create database pool;' -U postgres
 #- psql -c "CREATE USER pool WITH PASSWORD 'pool';" -U postgres
 deploy:
-  install: skip
-  script: skip
   provider: pypi
   username: __token__
   password:
