--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ python:
 #    env: TOXENV=py38-djmaster
 #  - python: 3.9
 #    env: TOXENV=py39-djmaster
-  include:
-    - python: 3.7
+#  include:
+#    - python: 3.7
 install:
   - echo "Empty install"
 #install:
