--- a/tox.ini
+++ b/tox.ini
@@ -3,10 +3,11 @@ skipsdist = True
 usedevelop = True
 minversion = 1.8
 envlist =
-    py{3.5,3.6,3.7,3.8,3.9}-dj2.2
-    py{3.6,3.7,3.8,3.9}-dj3.0
-    py{3.6,3.7,3.8,3.9}-dj3.1
-    py{3.6,3.7,3.8,3.9}-djmaster
+    py{3.5,3.6,3.7,3.8,3.9,3.10}-dj2.2
+    py{3.6,3.7,3.8,3.9,3.10}-dj3.0
+    py{3.6,3.7,3.8,3.9,3.10}-dj3.1
+    py{3.6,3.7,3.8,3.9,3.10}-dj3.2
+    py{3.6,3.7,3.8,3.9,3.10}-djmaster
 
 [testenv]
 passenv = DJANGO_DB_HOST
@@ -16,17 +17,19 @@ basepython =
     py3.7: python3
     py3.8: python3
     py3.9: python3
+    py3.10: python3
     pypy: pypy
 usedevelop = true
 setenv =
     PYTHONPATH = {toxinidir}
     DJANGO_SETTINGS_MODULE=tests.test_settings
 deps =
-	py{3.5,3.6,3.7,3.8,3.9,pypy}: coverage
+	py{3.5,3.6,3.7,3.8,3.9,3.10,pypy}: coverage
     psycopg2-binary
     dj2.2: https://github.com/django/django/archive/stable/2.2.x.tar.gz#egg=django
     dj3.0: https://github.com/django/django/archive/stable/3.0.x.tar.gz#egg=django
     dj3.1: https://github.com/django/django/archive/stable/3.1.x.tar.gz#egg=django
+    dj3.2: https://github.com/django/django/archive/stable/3.2.x.tar.gz#egg=django
     djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
 
 commands =
